# OpenGL-offline

./: .gitignore  1605070_1.cpp  1605070_2.cpp  Bubbles.cpp  Bubbles.h  CMakeLists.txt  CameraHandler.cpp  CameraHandler.h  DrawShape.cpp  DrawShape.h  Gun.cpp  Gun.h  Point.cpp  Point.h  README.md  Timer.h  main.cpp  script.sh
